[package]
name = "rucos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[lib]
name = "rucos"
path = "src/lib.rs"


[[test]]
name = "rucos_test"
path = "tests/lib.rs"

#[[bench]]
#name = "constraint_solver_bench"
#path = "benchit/benchs.rs"