[package]
name = "rucos"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
cpu-time = "*"

[[bench]]
name = "rucos_benches"
path = "benches/lib.rs"
test = true

[lib]
name = "rucos"
path = "src/lib.rs"

[[example]]
name = "rucos_examples"
path = "examples/lib.rs"


[[test]]
name = "rucos_test"
path = "tests/lib.rs"

#[[bench]]
#name = "constraint_solver_bench"
#path = "benchit/benchs.rs"